fixed toolbar icon misalignment

--- a/css/theme.css
+++ b/css/theme.css
@@ -66,7 +66,8 @@ MenuToolbar {
 MenuTitleLabel{
         color: white;
         font-size: 16pt;
-        margin: 30px;
+        margin-top: 30px;
+        margin-left:30px;
         text-align: center;
         font-family: var(--styled-text);
 }
@@ -100,9 +101,12 @@ Reservation {
         cn1-source-dpi: 250;
 }
 
+LogoIcon{
+        margin-top: 30px;
+}
+
 WhiteIcon {
         color: white;
-        margin: 50px 100px 250px 100px;
 }
 
 /*MenuScreen Starts */
